--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/idilayce.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/idilayce.jpg" class="hoverZoomLink"></a>
+              <a href="images/idil.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="images/idil.JPG" class="hoverZoomLink"></a>
             </td>
 
           </tr>
@@ -94,7 +94,7 @@
           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
 	    <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/UMRAM.png"width="160" height="80"></td>
+                <img src="images/umram-logo-2.jpg"width="160" height="80"></td>
               <td width="75%" valign="center">
                 UMRAM
                 <br>
@@ -108,7 +108,7 @@
 		  
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/aselsan.png" alt=""width="160" height="60">
+                <img src="images/logo1.jpg" alt=""width="160" height="60">
               </td>
               <td width="75%" valign="center">
                 ASELSAN
@@ -131,11 +131,11 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/covid.png" alt="" width="160" height="90">
+              <img src="images/main.png" alt="" width="160" height="90">
             </td>
 
             <td width="75%" valign="middle">
-              <a href="https://arxiv.org/pdf/2308.12969.pdf">
+              <a href="https://ieeexplore.ieee.org/abstract/document/10342847">
                 <papertitle>COVID-19 Detection from Respiratory Sounds with Hierarchical Spectrogram Transformers</papertitle>
               </a>
               <br>
@@ -179,7 +179,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/mri.png" alt="" width="160" height="80">
+              <img src="images/mri.gif" alt="" width="160" height="80">
             </td>
 
             <td width="75%" valign="middle">
