--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
               <p style="text-align:center">
                 <name>Ayce Idil Aytekin</name>
               <p>
-              I am a PhD student at Max Planck Institute for Informatics, and I am doing my research immersion lab in <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
+              I am a PhD student at Max Planck Institute for Informatics, and I am currently working in <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
               </p>
               <p>
-              Currently, I focus on 3D human pose estimation and 3D scene understanding.
-              I am particularly interested in leveraging physics to excel in these domains. 
-	      Previously, I worked under the supervision of <a href="https://janericlenssen.github.io">Jan Eric Lenssen</a> on diffusion model efficiency in <a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-machine-learning">Computer Vision and Machine Learning Department</a>.
+              My focus is on 3D human pose estimation and 3D scene understanding. I am particularly interested in leveraging physics to excel in these domains. 
+	      Previously, I worked under the supervision of <a href="https://janericlenssen.github.io">Jan Eric Lenssen</a> on diffusion model efficiency in <a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-machine-learning">Computer Vision and Machine Learning Department</a> at MPII.
               </p>
               <p style="text-align:center">
                 <a href="mailto:aaytekin@mpi-sws.org">Email</a> &nbsp/&nbsp
@@ -98,7 +97,7 @@
               <td width="75%" valign="center">
                 UMRAM
                 <br>
-                Undergraduate Researcher working on COVID-19 detection and multi-contrast MRI synthesis
+                Undergraduate researcher working on COVID-19 detection and multi-contrast MRI synthesis
                 <br>
                 Dec 2020 - Sep 2022
                 <br>
@@ -113,7 +112,7 @@
               <td width="75%" valign="center">
                 ASELSAN
                 <br>
-                Digital Design Intern
+                Digital design intern
                 <br>
                 Jul 2021 - Aug 2021
               </td>
