--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/idil.JPG"><img style="width:100%;max-width:100%" alt="profile photo" src="images/idil.JPG" class="hoverZoomLink"></a>
+              <a href="images/idil2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/idil2.jpg" class="hoverZoomLink"></a>
             </td>
 
           </tr>
@@ -73,7 +73,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/bilkent.png" style="width: auto; height: auto;"></td>
+              <img src="images/bilkent.png" width="160" height: auto;"></td>
             <td width="75%" valign="center">
               BSc Electrical and Electronics Engineering, Bilkent University
               <br>
@@ -93,7 +93,7 @@
           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
 	    <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/umram-logo-2.jpg" style="width: auto; height: auto;"></td>
+                <img src="images/umram-logo-2.jpg" width="160" height: auto;"></td>
               <td width="75%" valign="center">
                 UMRAM
                 <br>
@@ -107,7 +107,7 @@
 		  
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/logo1.jpg" style="width: auto; height: auto;">
+                <img src="images/logo1.jpg" width="160" height: auto;">
               </td>
               <td width="75%" valign="center">
                 ASELSAN
@@ -155,7 +155,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/covid-conf.png" alt="" width="160" height="50">
+              <img src="images/covid-conf.png" alt="" width="160" height="90">
             </td>
 
             <td width="75%" valign="middle">
@@ -178,7 +178,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/mri.gif" alt="" width="160" height="80">
+              <img src="images/mri.gif" alt="" width="160" height="120">
             </td>
 
             <td width="75%" valign="middle">
