--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/bilkent.png" width="160" height: auto;"></td>
+              <img src="images/bilkent.png" width="120" height: auto;"></td>
             <td width="75%" valign="center">
               BSc Electrical and Electronics Engineering, Bilkent University
               <br>
@@ -93,7 +93,7 @@
           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
 	    <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/umram-logo-2.jpg" width="160" height: auto;"></td>
+                <img src="images/umram-logo-2.jpg" width="120" height: auto;"></td>
               <td width="75%" valign="center">
                 UMRAM
                 <br>
@@ -107,7 +107,7 @@
 		  
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/logo1.jpg" width="160" height: auto;">
+                <img src="images/logo1.jpg" width="120" height: auto;">
               </td>
               <td width="75%" valign="center">
                 ASELSAN
@@ -155,7 +155,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/covid-conf.png" alt="" width="160" height="90">
+              <img src="images/covid-conf.jpg" alt="" width="160" height="90">
             </td>
 
             <td width="75%" valign="middle">
