--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
               <p style="text-align:center">
                 <name>Ayce Idil Aytekin</name>
               <p>
-              I am a PhD student at Max Planck Institute for Informatics, and I am currently working in <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
+              I am a first-year PhD student at Max Planck Institute for Informatics, and I am currently working in <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
               </p>
               <p>
-              My focus is on 3D human pose estimation and 3D scene understanding. I am particularly interested in leveraging physics to excel in these domains. 
-	      Previously, I worked under the supervision of <a href="https://janericlenssen.github.io">Jan Eric Lenssen</a> on diffusion model efficiency in <a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-machine-learning">Computer Vision and Machine Learning Department</a> at MPII.
+              My focus is on hand-object interaction. I am particularly interested in leveraging large vision-language models and physics to excel in these domains. 
+	      I've also done some work on physics-based 3D human pose estimation and diffusion model efficiency.
               </p>
               <p style="text-align:center">
-                <a href="mailto:aaytekin@mpi-sws.org">Email</a> &nbsp/&nbsp
+                <a href="mailto:aaytekin@mpi-inf.mpg.de">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.de/citations?hl=en&user=PzB6r5EAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/aidilayce">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/idil2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/idil2.jpg" class="hoverZoomLink"></a>
+              <a href="images/1720184403724.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/1720184403724.jpeg" class="hoverZoomLink"></a>
             </td>
 
           </tr>
@@ -54,9 +54,9 @@
               <img src="images/mpi_logo.png" alt=""width="160" height="45">
             </td>
             <td width="75%" valign="center">
-              PhD student (preparatory phase), MPII
+              PhD student, MPII
               <br>
-              October 2022 - present
+              July 2024 - present
             </td>
           </tr>
 
@@ -67,7 +67,7 @@
             <td width="75%" valign="center">
               PhD student (preparatory phase), Saarland University
               <br>
-              October 2022 - present
+              October 2022 - June 2024
             </td>
           </tr>
 
