--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Ayce Idil Aytekin</name>
               <p>
-              I am a first-year PhD student at Max Planck Institute for Informatics, and I am currently working in <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
+              I am a first-year PhD student at Max Planck Institute for Informatics, <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
               </p>
               <p>
               My focus is on hand-object interaction. I am particularly interested in leveraging large vision-language models and physics to excel in these domains. 
