--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
               I am a first-year PhD student at Max Planck Institute for Informatics, <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
               </p>
               <p>
-              My focus is on hand-object interaction. I am particularly interested in leveraging large vision-language models and physics to excel in these domains. 
-	      I've also done some work on physics-based 3D human pose estimation and diffusion model efficiency.
+             My research focuses on hand-object interaction and 3D scene understanding. 
+		      I specifically aim to leverage large vision-language models and incorporate physics to advance these fields. 
+		      I have also worked on physics-based 3D human pose estimation, diffusion model efficiency, and medical imaging. 
+		      Ultimately, I hope to make practical contributions to integrating robots into our daily lives.
               </p>
               <p style="text-align:center">
                 <a href="mailto:aaytekin@mpi-inf.mpg.de">Email</a> &nbsp/&nbsp
