--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
                 <name>Ayce Idil Aytekin</name>
-              <p>
+              <p style="text-align: justify;">
               I am a first-year PhD student at Max Planck Institute for Informatics, <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
               </p>
-              <p>
+              <p style="text-align: justify;">
              My research focuses on hand-object interaction and 3D scene understanding. 
 		      I specifically aim to leverage large vision-language models and incorporate physics to advance these fields. 
 		      I have also worked on physics-based 3D human pose estimation, diffusion model efficiency, and medical imaging. 
@@ -35,7 +35,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-	      <a href="images/1720184403724.jpeg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="1720184403724.jpeg" class="hoverZoomLink"></a>
+	      <a href="images/1720184403724.jpeg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" src="1720184403724.jpeg" class="hoverZoomLink"></a>
             </td>
 
           </tr>
