--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-	      <a href="images/1720184403724.png"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" src="1720184403724.png" class="hoverZoomLink"></a>
+	      <a href="images/1720184403724.png"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/1720184403724.png" class="hoverZoomLink">
             </td>
 
           </tr>
