--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
 	      <a href="images/idil3.png"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/idil3.png" class="hoverZoomLink">
+	      <p style="text-align: center; margin-top: 10px;">
+               🏳️‍🌈 <br>
+	      Pronouns: they/them
+  		</p>
             </td>
 
           </tr>
