Update index.html to add cvprw2025

--- a/index.html
+++ b/index.html
@@ -133,7 +133,31 @@
 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
+	  <tr>
+	    <td style="padding:20px;width:25%;vertical-align:middle">
+	      <img src="images/physdynpose.png" alt="" width="160" height="90">
+	    </td>
+
+	    <td width="75%" valign="middle">
+	      <a href="https://openaccess.thecvf.com/content/CVPR2025W/RHOBIN/papers/Aytekin_Physics-based_Human_Pose_Estimation_from_a_Single_Moving_RGB_Camera_CVPRW_2025_paper.pdf">
+		<papertitle>Physics-based Human Pose Estimation from a Single Moving RGB Camera</papertitle>
+	      </a>
+	      <br>
+	      <strong>Ayce Idil Aytekin</strong>,
+	      	    Chuqiao Li, 
+		    Diogo Luvizon, 
+		    Rishabh Dabral, 
+		    Martin Oswald, 
+		    Marc Habermann, 
+		    Christian Theobalt,
+	      <br>
+	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops </em>, 2025
+	      <br>
+<!-- 	      <a href="https://github.com/icon-lab/HST">project page</a> -->
+	    </td>
+	  </tr>
+		
+		<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/main.png" alt="" width="160" height="90">
             </td>
