--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
               <p style="text-align:center">
                 <name>Ayce Idil Aytekin</name>
               <p style="text-align: justify;">
-              I am a first-year PhD student at Max Planck Institute for Informatics, <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
+              I am a PhD student at Max Planck Institute for Informatics, <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
               </p>
               <p style="text-align: justify;">
-             My research focuses on hand-object interaction and 3D scene understanding. 
-		      I specifically aim to leverage large vision-language models and incorporate physics to advance these fields. 
+             My research focuses on 3D hand-object interaction and scene understanding from visual and tactile input.
 		      I have also worked on physics-based 3D human pose estimation, diffusion model efficiency, and medical imaging. 
-		      Ultimately, I hope to make practical contributions to integrating robots into our daily lives.
+		      Ultimately, I aim to enable intuitive human-robot interaction through robust 3D perception.
               </p>
               <p style="text-align:center">
                 <a href="mailto:aaytekin@mpi-inf.mpg.de">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.de/citations?hl=en&user=PzB6r5EAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/aidilayce">Github</a>
+                <a href="https://github.com/aidilayce">Github</a> &nbsp/&nbsp
+		<a href="https://people.mpi-inf.mpg.de/~aaytekin/">Departmental Page</a>     
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -59,7 +59,7 @@
               <img src="images/mpi_logo.png" alt=""width="160" height="45">
             </td>
             <td width="75%" valign="center">
-              PhD student, MPII
+              PhD student, MPII & Saarland University
               <br>
               July 2024 - present
             </td>
@@ -70,7 +70,7 @@
               <img src="images/saarland.png" alt=""width="160" height="60">
             </td>
             <td width="75%" valign="center">
-              PhD student (preparatory phase), Saarland University
+              PhD student (preparatory phase), Saarland University via cs@maxplanck program
               <br>
               October 2022 - June 2024
             </td>
@@ -87,41 +87,6 @@
               Ranked 3rd among 2022 graduates with GPA 3.96/4.00
             </td>
           </tr>
-
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
-            <tr>
-              <td>
-                <heading>Work experience</heading>
-              </td>
-            </tr>
-          </tbody></table>
-          <table width="100%" align="center" border="0" cellpadding="20"><tbody>
-	    <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/umram-logo-2.jpg" width="120" height: auto;"></td>
-              <td width="75%" valign="center">
-                UMRAM
-                <br>
-                Undergraduate researcher working on COVID-19 detection and multi-contrast MRI synthesis
-                <br>
-                Dec 2020 - Sep 2022
-                <br>
-                Mentor: <a href="https://kilyos.ee.bilkent.edu.tr/~cukur/">Prof Tolga Cukur</a>
-              </td>
-            </tr>
-		  
-            <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/logo1.jpg" width="120" height: auto;">
-              </td>
-              <td width="75%" valign="center">
-                ASELSAN
-                <br>
-                Digital design intern
-                <br>
-                Jul 2021 - Aug 2021
-              </td>
-            </tr>
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                 <tr>
@@ -151,7 +116,7 @@
 		    Marc Habermann, 
 		    Christian Theobalt,
 	      <br>
-	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops </em>, 2025
+	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops</em>, 2025
 	      <br>
 <!-- 	      <a href="https://github.com/icon-lab/HST">project page</a> -->
 	    </td>
@@ -176,7 +141,7 @@
 		    Haydar Celik, 
 		    Tolga Cukur,
               <br>
-              <em> IEEE Journal of Biomedical and Health Informatics </em>, 2023
+              <em> IEEE Journal of Biomedical and Health Informatics</em>, 2023
               <br>
               <a href="https://github.com/icon-lab/HST">project page</a>
             </td>
@@ -228,6 +193,40 @@
 
         </tbody></table>
 
+		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+            <tr>
+              <td>
+                <heading>Work experience</heading>
+              </td>
+            </tr>
+          </tbody></table>
+          <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+	    <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/umram-logo-2.jpg" width="120" height: auto;"></td>
+              <td width="75%" valign="center">
+                UMRAM
+                <br>
+                Undergraduate researcher working on COVID-19 detection and multi-contrast MRI synthesis
+                <br>
+                Dec 2020 - Sep 2022
+                <br>
+                Mentor: <a href="https://kilyos.ee.bilkent.edu.tr/~cukur/">Prof Tolga Cukur</a>
+              </td>
+            </tr>
+		  
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/logo1.jpg" width="120" height: auto;">
+              </td>
+              <td width="75%" valign="center">
+                ASELSAN
+                <br>
+                Digital design intern
+                <br>
+                Jul 2021 - Aug 2021
+              </td>
+            </tr>
 
 <!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
