--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-	      <a href="images/idil3.png"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/idil3.png" class="hoverZoomLink">
+	      <a href="images/ace_april.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/ace_april.jpg" class="hoverZoomLink">
 	      <p style="text-align: center; margin-top: 10px;">
                🏳️‍🌈 &nbsp; she/they
   		</p>
@@ -100,6 +100,27 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 	  <tr>
 	    <td style="padding:20px;width:25%;vertical-align:middle">
+	      <img src="images/teaser-2.png" alt="" width="160" height="90">
+	    </td>
+
+	    <td width="75%" valign="middle">
+	      <a href="https://arxiv.org/pdf/2508.18213">
+		<papertitle>Follow My Hold: Hand-Object Interaction Reconstruction through Geometric Guidance</papertitle>
+	      </a>
+	      <br>
+	      <strong>Ayce Idil Aytekin</strong>,
+	      	    Helge Rhodin,
+		    Rishabh Dabral, 
+		    Christian Theobalt,
+	      <br>
+	      <em> ArXiv</em>, 2025
+	      <br>
+			<a href="https://aidilayce.github.io/FollowMyHold-page/">project page</a>
+			<a href="https://github.com/aidilayce/FollowMyHold">code</a>
+	    </td>
+	  </tr>
+		<tr>
+	    <td style="padding:20px;width:25%;vertical-align:middle">
 	      <img src="images/physdynpose.png" alt="" width="160" height="90">
 	    </td>
 
@@ -118,7 +139,6 @@
 	      <br>
 	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops</em>, 2025
 	      <br>
-<!-- 	      <a href="https://github.com/icon-lab/HST">project page</a> -->
 	    </td>
 	  </tr>
 		
