--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
               <em> IEEE Journal of Biomedical and Health Informatics</em>, 2023
               <br>
               <a href="https://github.com/icon-lab/HST">project page</a>
+			  <a href="https://github.com/icon-lab/HST">code</a>
             </td>
           </tr>
 
