Update links to use bracketed text

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 	      <br>
 	      <em> ArXiv</em>, 2025
 	      <br>
-			<a href="https://aidilayce.github.io/FollowMyHold-page/">project page</a>
-			<a href="https://github.com/aidilayce/FollowMyHold">code</a>
+			<a href="https://aidilayce.github.io/FollowMyHold-page/">[project page]</a>
+			<a href="https://github.com/aidilayce/FollowMyHold">[code]</a>
 	    </td>
 	  </tr>
 		<tr>
@@ -139,6 +139,7 @@
 	      <br>
 	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops</em>, 2025
 	      <br>
+			<a href="https://github.com/aidilayce/PhysDynPose">[code]</a>
 	    </td>
 	  </tr>
 		
@@ -163,8 +164,8 @@
               <br>
               <em> IEEE Journal of Biomedical and Health Informatics</em>, 2023
               <br>
-              <a href="https://github.com/icon-lab/HST">project page</a>
-			  <a href="https://github.com/icon-lab/HST">code</a>
+              <a href="https://github.com/icon-lab/HST">[project page]</a>
+			  <a href="https://github.com/icon-lab/HST">[code]</a>
             </td>
           </tr>
 
