--- a/index.html
+++ b/index.html
@@ -44,9 +44,134 @@
           </tr>
         </tbody></table>
 
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Research</heading>
+                </td>
+              </tr>
+            </tbody></table>
 
 
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+	  <tr>
+	    <td style="padding:20px;width:25%;vertical-align:middle">
+	      <img src="images/teaser-2.png" alt="" style="width:160px; height:auto; max-width:100%;">
+	    </td>
+
+	    <td width="75%" valign="middle">
+	      <a href="https://arxiv.org/pdf/2508.18213">
+		<papertitle>Follow My Hold: Hand-Object Interaction Reconstruction through Geometric Guidance</papertitle>
+	      </a>
+	      <br>
+	      <strong>Ayce Idil Aytekin</strong>,
+	      	    Helge Rhodin,
+		    Rishabh Dabral, 
+		    Christian Theobalt,
+	      <br>
+	      <em> ArXiv</em>, 2025
+	      <br>
+			<a href="https://aidilayce.github.io/FollowMyHold-page/">[project page]</a>
+			<a href="https://github.com/aidilayce/FollowMyHold">[code]</a>
+	    </td>
+	  </tr>
+		<tr>
+	    <td style="padding:20px;width:25%;vertical-align:middle">
+	      <img src="images/physdynpose.png" alt="" style="width:160px; height:auto; max-width:100%;">
+	    </td>
+
+	    <td width="75%" valign="middle">
+	      <a href="https://openaccess.thecvf.com/content/CVPR2025W/RHOBIN/papers/Aytekin_Physics-based_Human_Pose_Estimation_from_a_Single_Moving_RGB_Camera_CVPRW_2025_paper.pdf">
+		<papertitle>Physics-based Human Pose Estimation from a Single Moving RGB Camera</papertitle>
+	      </a>
+	      <br>
+	      <strong>Ayce Idil Aytekin</strong>,
+	      	    Chuqiao Li, 
+		    Diogo Luvizon, 
+		    Rishabh Dabral, 
+		    Martin Oswald, 
+		    Marc Habermann, 
+		    Christian Theobalt,
+	      <br>
+	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops</em>, 2025
+	      <br>
+			<a href="https://github.com/aidilayce/PhysDynPose">[code]</a>
+	    </td>
+	  </tr>
+		
+		<tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/main.png" alt="" style="width:160px; height:auto; max-width:100%;">
+            </td>
+
+            <td width="75%" valign="middle">
+              <a href="https://ieeexplore.ieee.org/abstract/document/10342847">
+                <papertitle>COVID-19 Detection from Respiratory Sounds with Hierarchical Spectrogram Transformers</papertitle>
+              </a>
+              <br>
+              <strong>Ayce Idil Aytekin</strong>,
+              Onat Dalmaz, 
+		    Kaan Gonc, 
+		    Haydar Ankishan, 
+		    Emine U Saritas, 
+		    Ulas Bagci, 
+		    Haydar Celik, 
+		    Tolga Cukur,
+              <br>
+              <em> IEEE Journal of Biomedical and Health Informatics</em>, 2023
+              <br>
+              <a href="https://github.com/icon-lab/HST">[project page]</a>
+			  <a href="https://github.com/icon-lab/HST">[code]</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/covid-conf.jpg" alt="" style="width:160px; height:auto; max-width:100%;">
+            </td>
+
+            <td width="75%" valign="middle">
+              <a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/12033/1203306/Detecting-COVID-19-from-respiratory-sound-recordings-with-transformers/10.1117/12.2611490.full">
+                <papertitle>Detecting COVID-19 from respiratory sound recordings with transformers</papertitle>
+              </a>
+              <br>
+
+              <strong>Ayce Idil Aytekin</strong>,
+		    Onat Dalmaz,
+		    Haydar Ankishan,
+		    Emine U. Saritas,
+		    Ulas Bagci,
+		    Tolga Cukur,
+		    Haydar Celik,
+              <br>
+              <em>Proc. SPIE Medical Imaging 2022: Computer-Aided Diagnosis</em>, 2022
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/mri.gif" alt="" style="width:160px; height:auto; max-width:100%;">
+            </td>
+
+            <td width="75%" valign="middle">
+              <a href="https://ieeexplore.ieee.org/abstract/document/9864937">
+                <papertitle>Multi-Contrast MRI Synthesis with Channel-Exchanging-Network</papertitle>
+              </a>
+              <br>
+              Onat Dalmaz, 
+              <strong>Ayce Idil Aytekin</strong>,
+		    Salman Ul Hassan Dar,
+		    Aykut Erdem,
+		    Erkut Erdem,
+		    Tolga Cukur,
+              <br>
+              <em>30th Signal Processing and Communications Applications Conference (SIU)</em>, 2022
+            </td>
+          </tr>
+
+        </tbody></table>
+
+		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
               <heading>Education</heading>
@@ -87,133 +212,6 @@
               Ranked 3rd among 2022 graduates with GPA 3.96/4.00
             </td>
           </tr>
-
-            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-                <tr>
-                <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Research</heading>
-                </td>
-              </tr>
-            </tbody></table>
-
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-	  <tr>
-	    <td style="padding:20px;width:25%;vertical-align:middle">
-	      <img src="images/teaser-2.png" alt="" width="160" height="90">
-	    </td>
-
-	    <td width="75%" valign="middle">
-	      <a href="https://arxiv.org/pdf/2508.18213">
-		<papertitle>Follow My Hold: Hand-Object Interaction Reconstruction through Geometric Guidance</papertitle>
-	      </a>
-	      <br>
-	      <strong>Ayce Idil Aytekin</strong>,
-	      	    Helge Rhodin,
-		    Rishabh Dabral, 
-		    Christian Theobalt,
-	      <br>
-	      <em> ArXiv</em>, 2025
-	      <br>
-			<a href="https://aidilayce.github.io/FollowMyHold-page/">[project page]</a>
-			<a href="https://github.com/aidilayce/FollowMyHold">[code]</a>
-	    </td>
-	  </tr>
-		<tr>
-	    <td style="padding:20px;width:25%;vertical-align:middle">
-	      <img src="images/physdynpose.png" alt="" width="160" height="90">
-	    </td>
-
-	    <td width="75%" valign="middle">
-	      <a href="https://openaccess.thecvf.com/content/CVPR2025W/RHOBIN/papers/Aytekin_Physics-based_Human_Pose_Estimation_from_a_Single_Moving_RGB_Camera_CVPRW_2025_paper.pdf">
-		<papertitle>Physics-based Human Pose Estimation from a Single Moving RGB Camera</papertitle>
-	      </a>
-	      <br>
-	      <strong>Ayce Idil Aytekin</strong>,
-	      	    Chuqiao Li, 
-		    Diogo Luvizon, 
-		    Rishabh Dabral, 
-		    Martin Oswald, 
-		    Marc Habermann, 
-		    Christian Theobalt,
-	      <br>
-	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops</em>, 2025
-	      <br>
-			<a href="https://github.com/aidilayce/PhysDynPose">[code]</a>
-	    </td>
-	  </tr>
-		
-		<tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/main.png" alt="" width="160" height="90">
-            </td>
-
-            <td width="75%" valign="middle">
-              <a href="https://ieeexplore.ieee.org/abstract/document/10342847">
-                <papertitle>COVID-19 Detection from Respiratory Sounds with Hierarchical Spectrogram Transformers</papertitle>
-              </a>
-              <br>
-              <strong>Ayce Idil Aytekin</strong>,
-              Onat Dalmaz, 
-		    Kaan Gonc, 
-		    Haydar Ankishan, 
-		    Emine U Saritas, 
-		    Ulas Bagci, 
-		    Haydar Celik, 
-		    Tolga Cukur,
-              <br>
-              <em> IEEE Journal of Biomedical and Health Informatics</em>, 2023
-              <br>
-              <a href="https://github.com/icon-lab/HST">[project page]</a>
-			  <a href="https://github.com/icon-lab/HST">[code]</a>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/covid-conf.jpg" alt="" width="160" height="90">
-            </td>
-
-            <td width="75%" valign="middle">
-              <a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/12033/1203306/Detecting-COVID-19-from-respiratory-sound-recordings-with-transformers/10.1117/12.2611490.full">
-                <papertitle>Detecting COVID-19 from respiratory sound recordings with transformers</papertitle>
-              </a>
-              <br>
-
-              <strong>Ayce Idil Aytekin</strong>,
-		    Onat Dalmaz,
-		    Haydar Ankishan,
-		    Emine U. Saritas,
-		    Ulas Bagci,
-		    Tolga Cukur,
-		    Haydar Celik,
-              <br>
-              <em>Proc. SPIE Medical Imaging 2022: Computer-Aided Diagnosis</em>, 2022
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/mri.gif" alt="" width="160" height="120">
-            </td>
-
-            <td width="75%" valign="middle">
-              <a href="https://ieeexplore.ieee.org/abstract/document/9864937">
-                <papertitle>Multi-Contrast MRI Synthesis with Channel-Exchanging-Network</papertitle>
-              </a>
-              <br>
-              Onat Dalmaz, 
-              <strong>Ayce Idil Aytekin</strong>,
-		    Salman Ul Hassan Dar,
-		    Aykut Erdem,
-		    Erkut Erdem,
-		    Tolga Cukur,
-              <br>
-              <em>30th Signal Processing and Communications Applications Conference (SIU)</em>, 2022
-            </td>
-          </tr>
-
-        </tbody></table>
 
 		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
             <tr>
