Update introduction with advisor details
Added advisor information to the introduction paragraph.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Ayce Idil Aytekin</name>
               <p style="text-align: justify;">
-              I am a PhD student at Max Planck Institute for Informatics, <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>.
+              I am a PhD student at Max Planck Institute for Informatics, <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence Department</a>, advised by <a href="https://people.mpi-inf.mpg.de/~theobalt/">Prof. Christian Theobalt</a>.
               </p>
               <p style="text-align: justify;">
              My research focuses on 3D hand-object interaction and scene understanding from visual and tactile input.
