--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               </p>
               <p style="text-align: justify;">
              My research focuses on 3D hand-object interaction and scene understanding from visual and tactile input.
+			  <!-- I make digital hands interact with objects so that robots can interact with objects. -->
 		      I have also worked on physics-based 3D human pose estimation, diffusion model efficiency, and medical imaging. 
 		      Ultimately, I aim to enable intuitive human-robot interaction through robust 3D perception.
               </p>
