Add news section and update publication information
Added a news section with recent paper acceptances and updated publication details.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
           </tr>
         </tbody></table>
 
+		  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:10px;">
+		  <tbody>
+		    <tr>
+		      <td style="padding:20px;width:100%;vertical-align:middle">
+		        <heading>News</heading>
+		        <ul>
+		          <li><strong>Nov 2025:</strong> Our paper <em>FollowMyHold</em> was accepted to <strong>3DV 2026</strong>.</li>
+		          <li><strong>Apr 2025:</strong> Our paper <em>PhysDynPose</em> was accepted to <strong>CVPR Rhobin Workshop 2025</strong>.</li>
+		        </ul>
+		      </td>
+		    </tr>
+		  </tbody>
+		</table>
+
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                 <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -68,9 +82,9 @@
 	      <strong>Ayce Idil Aytekin</strong>,
 	      	    Helge Rhodin,
 		    Rishabh Dabral, 
-		    Christian Theobalt,
+		    Christian Theobalt
 	      <br>
-	      <em> 3DV</em>, 2026
+	      <em> 3D Vision (3DV) 2026, Vancouver</em>
 	      <br>
 			<a href="https://aidilayce.github.io/FollowMyHold-page/">[project page]</a>
 			<a href="https://github.com/aidilayce/FollowMyHold">[code]</a>
@@ -92,9 +106,9 @@
 		    Rishabh Dabral, 
 		    Martin Oswald, 
 		    Marc Habermann, 
-		    Christian Theobalt,
+		    Christian Theobalt
 	      <br>
-	      <em> Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops</em>, 2025
+	      <em> CVPRW 2025, Nashville </em>
 	      <br>
 			<a href="https://github.com/aidilayce/PhysDynPose">[code]</a>
 	    </td>
@@ -117,9 +131,9 @@
 		    Emine U Saritas, 
 		    Ulas Bagci, 
 		    Haydar Celik, 
-		    Tolga Cukur,
+		    Tolga Cukur
               <br>
-              <em> IEEE Journal of Biomedical and Health Informatics</em>, 2023
+              <em> IEEE Journal of Biomedical and Health Informatics 2023</em>
               <br>
               <a href="https://github.com/icon-lab/HST">[project page]</a>
 			  <a href="https://github.com/icon-lab/HST">[code]</a>
@@ -143,9 +157,9 @@
 		    Emine U. Saritas,
 		    Ulas Bagci,
 		    Tolga Cukur,
-		    Haydar Celik,
+		    Haydar Celik
               <br>
-              <em>Proc. SPIE Medical Imaging 2022: Computer-Aided Diagnosis</em>, 2022
+              <em>Proc. SPIE Medical Imaging 2022: Computer-Aided Diagnosis 2022</em>
             </td>
           </tr>
 
@@ -164,9 +178,9 @@
 		    Salman Ul Hassan Dar,
 		    Aykut Erdem,
 		    Erkut Erdem,
-		    Tolga Cukur,
+		    Tolga Cukur
               <br>
-              <em>30th Signal Processing and Communications Applications Conference (SIU)</em>, 2022
+              <em>30th Signal Processing and Communications Applications Conference (SIU) 2022, Safranbolu</em>
             </td>
           </tr>
 
@@ -248,19 +262,6 @@
                 Jul 2021 - Aug 2021
               </td>
             </tr>
-
-<!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Hobbies</heading>
-              <p>
-                I enjoy table tennis, lindy hop, reading poetry and novels in both English and Chinese (hopefully I can catch up with German too!).
-
-              </p>
-            </td>
-          </tr>
-        </tbody></table> -->
-
 
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
