Refactor table styles and update news list

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           </tr>
         </tbody></table>
 
-		  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:10px;">
+		  <table style="width:100%;border:0;border-spacing:0;border-collapse:separate;margin:5px auto 0 auto;">
 		  <tbody>
 		    <tr>
-		      <td style="padding:20px;width:100%;vertical-align:middle">
+		      <td style="padding:10px 0 0 0;vertical-align:middle">
 		        <heading>News</heading>
-		        <ul>
+		        <ul style="margin-top:5px;">
 		          <li><strong>Nov 2025:</strong> Our paper <em>FollowMyHold</em> was accepted to <strong>3DV 2026</strong>.</li>
 		          <li><strong>Apr 2025:</strong> Our paper <em>PhysDynPose</em> was accepted to <strong>CVPR Rhobin Workshop 2025</strong>.</li>
 		        </ul>
