Add details in index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		    Tolga Cukur,
 		    Haydar Celik
               <br>
-              <em>Proc. SPIE Medical Imaging 2022: Computer-Aided Diagnosis 2022</em>
+              <em>Proc. SPIE Medical Imaging 2022: Computer-Aided Diagnosis 2022, San Diego California</em>
             </td>
           </tr>
 
